--- a/main.tex
+++ b/main.tex
@@ -469,7 +469,9 @@ augmentation and data availability for ontology learning.
 LLMs can be prompted to assume certain roles/personas e.g. `helpful assistant'
 while performing a certain task. These roles define a domain space for the LLM
 and is a powerful tool that contextualizes the task and user input data for
-the LLM
+the LLM. For ontology learning, the specificity of this domain context can be
+varied to emphasize the ontological nature of the data, the topic of the
+ontology or generalized to the modelling objective. Domain context 
 
 \cite{zheng2023WhenAeHelpful}
 
