--- a/main.tex
+++ b/main.tex
@@ -471,7 +471,8 @@ while performing a certain task. These roles define a domain space for the LLM
 and is a powerful tool that contextualizes the task and user input data for
 the LLM. For ontology learning, the specificity of this domain context can be
 varied to emphasize the ontological nature of the data, the topic of the
-ontology or generalized to the modelling objective. Domain context 
+ontology or generalized to the modelling objective. As a factor, domain
+context 
 
 \cite{zheng2023WhenAeHelpful}
 
