--- a/main.tex
+++ b/main.tex
@@ -472,7 +472,8 @@ and is a powerful tool that contextualizes the task and user input data for
 the LLM. For ontology learning, the specificity of this domain context can be
 varied to emphasize the ontological nature of the data, the topic of the
 ontology or generalized to the modelling objective. As a factor, domain
-context 
+context analyzes the amount of data domain context necessary for an LLM to
+perform an ontology learning task.
 
 \cite{zheng2023WhenAeHelpful}
 
