--- a/main.tex
+++ b/main.tex
@@ -494,6 +494,10 @@ LLMs is crucial to understanding their suitability for ontology learning.
   creativity. The various hyperparameters highlight the importance of variety
   and token-constrained response generation for LLMs to perform ontology
   learning.
+\item In conjunction with the various hyperparameters, statistical consistency
+  of LLM responses across repetitions is necessary for their ability to
+  perform ontology learning. Statistical consistency displays whether LLMs are
+  fit for development of logical and factual knowledge systems like LLMs.
 \end{itemize}
 
 \subsection{Interplay of Factors}
