--- a/main.tex
+++ b/main.tex
@@ -497,7 +497,8 @@ LLMs is crucial to understanding their suitability for ontology learning.
 \item In conjunction with the various hyperparameters, statistical consistency
   of LLM responses across repetitions is necessary for their ability to
   perform ontology learning. Statistical consistency displays whether LLMs are
-  fit for development of logical and factual knowledge systems like ontologies.
+  fit for development of logical and factual knowledge systems like
+  ontologies.
 \end{itemize}
 
 \subsection{Interplay of Factors}
