--- a/main.tex
+++ b/main.tex
@@ -504,6 +504,9 @@ LLMs is crucial to understanding their suitability for ontology learning.
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
 
+Ontology and LLM factors influence the abilities of LLMs to
+perform ontology learning. However, these factors 
+
 \section{Experimentation}
 \label{sec:experimentation}
 
