--- a/main.tex
+++ b/main.tex
@@ -504,8 +504,8 @@ LLMs is crucial to understanding their suitability for ontology learning.
 \subsection{Interplay of Factors}
 \label{subsec:factor-interplay}
 
-Ontology and LLM factors influence the abilities of LLMs to
-perform ontology learning. However, these factors 
+Ontology and LLM factors influencing LLM-supported ontology learning are not
+independant of each other. However, these factors
 
 \section{Experimentation}
 \label{sec:experimentation}
