--- a/main.tex
+++ b/main.tex
@@ -505,7 +505,9 @@ LLMs is crucial to understanding their suitability for ontology learning.
 \label{subsec:factor-interplay}
 
 Ontology and LLM factors influencing LLM-supported ontology learning are not
-independant of each other. However, these factors
+independant of each other. Ontology factors like structure are intrinsically
+linked to entities in an ontology and therefore to the OL Layer Cake of
+ontology factors. The However, these factors
 
 \section{Experimentation}
 \label{sec:experimentation}
