--- a/main.tex
+++ b/main.tex
@@ -508,7 +508,7 @@ Ontology and LLM factors influencing LLM-supported ontology learning are not
 independant of each other. Ontology factors like structure are intrinsically
 linked to entities in an ontology and therefore to the OL Layer Cake of
 ontology factors. Functional measures of an ontology are driven by the
-taxonomical and non-hierarchical modeling of the domain. The nature of an ontology's taxonomy and non-hierarchical
+taxonomical and non-hierarchical modeling of the underlying domain. The nature of an ontology's taxonomy and non-hierarchical
 relations  The However, these factors
 
 \section{Experimentation}
