--- a/main.tex
+++ b/main.tex
@@ -505,10 +505,14 @@ LLMs is crucial to understanding their suitability for ontology learning.
 \label{subsec:factor-interplay}
 
 Ontology and LLM factors influencing LLM-supported ontology learning are not
-independant of each other. Ontology factors like structure are intrinsically
+independant of each other. These factors influence each other in complex ways
+thereby introducing additional complexity in their effect on an ontology
+learning task. Ontology factors like structure are intrinsically
 linked to entities in an ontology and therefore to the OL Layer Cake of
 ontology factors. Functional measures of an ontology are driven by the
-taxonomical and non-hierarchical modeling of the underlying domain. The nature of an ontology's taxonomy and non-hierarchical
+taxonomical and non-hierarchical modeling of the underlying domain. At the
+base level, the scope of an ontology is a large guiding factor determining the
+existence of certain entity types and the The nature of an ontology's taxonomy and non-hierarchical
 relations  The However, these factors
 
 \section{Experimentation}
