--- a/main.tex
+++ b/main.tex
@@ -511,7 +511,7 @@ learning task. Ontology factors like structure are intrinsically
 linked to entities in an ontology and therefore to the OL Layer Cake of
 ontology factors. Functional measures of an ontology are driven by the
 taxonomical and non-hierarchical modeling of the underlying domain. At the
-base level, the scope of an ontology is a large guiding factor determining the
+base level, the scope of an ontology is a guiding factor determining the
 existence of certain entity types and the The nature of an ontology's taxonomy and non-hierarchical
 relations  The However, these factors
 
