--- a/main.tex
+++ b/main.tex
@@ -512,8 +512,13 @@ linked to entities in an ontology and therefore to the OL Layer Cake of
 ontology factors. Functional measures of an ontology are driven by the
 taxonomical and non-hierarchical modeling of the underlying domain. At the
 base level, the scope of an ontology is a guiding factor determining the
-existence of certain entity types and the The nature of an ontology's taxonomy and non-hierarchical
-relations  The However, these factors
+existence of certain entity types and the nature of permissible
+attributes. In terms of LLM factors, the choice of approaches may be confined
+to certain LLMs depending on their size or the existence of fine-tuning APIs
+for commerical models. Different domain contexts may influence the
+hyperparameter settings that enable accurate ontology learning. Reasoning
+specialization models may not be suitable for certain approaches while certain
+objective modelling approaches may benefit from 
 
 \section{Experimentation}
 \label{sec:experimentation}
