--- a/main.tex
+++ b/main.tex
@@ -518,7 +518,7 @@ to certain LLMs depending on their size or the existence of fine-tuning APIs
 for commerical models. Different domain contexts may influence the
 hyperparameter settings that enable accurate ontology learning. Reasoning
 specialization models may not be suitable for certain approaches while certain
-objective modelling approaches may benefit from 
+objective modelling approaches may benefit from different domain contexts.
 
 \section{Experimentation}
 \label{sec:experimentation}
