--- a/main.tex
+++ b/main.tex
@@ -520,6 +520,10 @@ hyperparameter settings that enable accurate ontology learning. Reasoning
 specialization models may not be suitable for certain approaches while certain
 objective modelling approaches may benefit from different domain contexts.
 
+The complex inter-factor influence affecting LLM-supported ontology learning
+adds several levels of complexity to accurately understand how each factor
+acts in isolation.
+
 \section{Experimentation}
 \label{sec:experimentation}
 
