--- a/main.tex
+++ b/main.tex
@@ -522,7 +522,9 @@ objective modelling approaches may benefit from different domain contexts.
 
 The complex inter-factor influence affecting LLM-supported ontology learning
 adds several levels of complexity to accurately understand how each factor
-acts in isolation.
+acts in isolation. Effective marginalization of each factor and comparing
+performance by varying inter-related variables provides insight into the exact
+manner of influence each factor introduces.
 
 \section{Experimentation}
 \label{sec:experimentation}
