--- a/todo.org
+++ b/todo.org
@@ -117,10 +117,13 @@ CLOSED: [2025-11-17 Mon 16:39]
 :END:
 
 
-** INPROGRESS Interplay of Factors
+** REVIEW Interplay of Factors
 :PROPERTIES:
 :CREATED:  [2025-11-14 Fri 12:30]
 :ID:       d750c277-9dc1-46da-a089-40a061c71b03
+:END:
+:LOGBOOK:
+- State "REVIEW"     from "INPROGRESS" [2025-11-17 Mon 16:59]
 :END:
 
 Needs a re-write.
