--- a/main.tex
+++ b/main.tex
@@ -529,6 +529,11 @@ manner of influence each factor introduces.
 \section{Experimentation}
 \label{sec:experimentation}
 
+To illustrate the influence of various factors on an LLM-supported ontology
+learning task, we conduct experiments for ontology population and investigate
+the ontology factors: structure, taxonomy and entity labels; and the LLM
+factors: choice of LLM, prompting approach, domain context and response variation.
+
 We perform ontology population as a ranked retrieval problem and investigate
 the influence of the ontology factors: structure and entity labels, and the
 LLM factors: choice of LLM, prompting approach over zero-shot and few-shot
