--- a/main.tex
+++ b/main.tex
@@ -532,7 +532,8 @@ manner of influence each factor introduces.
 To illustrate the influence of various factors on an LLM-supported ontology
 learning task, we conduct experiments for ontology population and investigate
 the ontology factors: structure, taxonomy and entity labels; and the LLM
-factors: choice of LLM, prompting approach, domain context and response variation.
+factors: choice of LLM, prompting approach, domain context and response
+variation.
 
 We perform ontology population as a ranked retrieval problem and investigate
 the influence of the ontology factors: structure and entity labels, and the
