--- a/main.tex
+++ b/main.tex
@@ -535,6 +535,9 @@ the ontology factors: structure, taxonomy and entity labels; and the LLM
 factors: choice of LLM, prompting approach, domain context and response
 variation.
 
+Ontology learning is the task of mapping new individuals to concepts within an
+ontology \cite{petasis2011OntologyPopulationEnrichment}
+
 We perform ontology population as a ranked retrieval problem and investigate
 the influence of the ontology factors: structure and entity labels, and the
 LLM factors: choice of LLM, prompting approach over zero-shot and few-shot
