--- a/main.tex
+++ b/main.tex
@@ -540,7 +540,9 @@ ontology \cite{petasis2011OntologyPopulationEnrichment}. We select ontology
 population as the first learning task to investigate as it is the simplest of
 all ontology learning tasks. However, despite being simple, ontology
 population requires an LLM to ``understand'' concepts and instances in an
-ontology to make new assertions. 
+ontology to make new assertions. LLM-supported ontology population helps us
+investigate the degree of awareness LLMs posses of ontology assertion
+relations and of the entities themselves.
 
 We perform ontology population as a ranked retrieval problem and investigate
 the influence of the ontology factors: structure and entity labels, and the
