--- a/main.tex
+++ b/main.tex
@@ -535,7 +535,7 @@ the ontology factors: structure, taxonomy and entity labels; and the LLM
 factors: choice of LLM, prompting approach, domain context and response
 variation.
 
-Ontology learning is the task of mapping new individuals to concepts within an
+Ontology population is the task of mapping new individuals to concepts within an
 ontology \cite{petasis2011OntologyPopulationEnrichment}. We select ontology
 population as the first learning task to investigate as it is the simplest of
 all ontology learning tasks. However, despite being simple, ontology
