--- a/main.tex
+++ b/main.tex
@@ -535,6 +535,9 @@ the ontology factors: structure, taxonomy and entity labels; and the LLM
 factors: choice of LLM, prompting approach, domain context and response
 variation.
 
+\subsection{Ontology Population}
+\label{subsec:ontology-population}
+
 Ontology population is the task of mapping new individuals to concepts within
 an ontology \cite{petasis2011OntologyPopulationEnrichment}. We select ontology
 population as the first learning task to investigate as it is the simplest of
