--- a/main.tex
+++ b/main.tex
@@ -547,8 +547,8 @@ ontology to make new assertions. LLM-supported ontology population helps us
 investigate the degree of awareness LLMs posses of ontology assertion
 relations and of the entities themselves.
 
-\subsection{Formulation}
-\label{subsec:formulation}
+% \subsection{Formulation}
+% \label{subsec:formulation}
 
 {\parindent0pt % disable indentation for formulation
   Following \citet{hlomani2014ApproachesMethodsMetrics}, we define an ontology
