--- a/main.tex
+++ b/main.tex
@@ -580,20 +580,20 @@ entities themselves.
 We conduct experiments over three ontologies of varying size and complexity.
 The Wines Ontology \cite{noy2001OntologyDevelopment101} is a well-known
 ontology; it is small, structurally simple, and represents a relatively
-popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber}
-is a larger, more complex and newer ontology focused on accurately capturing
-the life-cycle of digital evidence. We have added individuals to its
-concepts using the Owl Trafficking example provided on the CASE Ontology
-website\footnote{\url{https://caseontology.org/examples/}} and also include
-in it all concepts from the closely related UCO Ontology
+popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
+a larger, more complex and newer ontology focused on accurately capturing the
+life-cycle of digital evidence. We have added individuals to its concepts
+using the Owl Trafficking example provided on the CASE Ontology
+website\footnote{\url{https://caseontology.org/examples/}} and also include in
+it all concepts from the closely related UCO Ontology
 \cite{casey2017AdvancingCoordinatedCyber}. Hereafter, we refer to this
 composite constructed ontology as the CASE Ontology. The Astronomy Ontology
 \cite{shaya2012AstronomyOntology} is the largest of the three; it has fewer
 individuals but higher depth and breadth. All three ontologies comprise of
-hierarchies where every concept (except the top concept) has at most a
-single parent. We wish to expand the considered set of ontologies to include
-larger ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb} with more
-complicated relationships and hierarchies in future works.  Table
+hierarchies where every concept (except the top concept) has at most a single
+parent. We wish to expand the considered set of ontologies to include larger
+ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb} with more complicated
+relationships and hierarchies in future works.  Table
 \ref{tab:ontology-metrics} outlines relevant structural metrics of the
 ontologies to highlight their differences.
 
