--- a/main.tex
+++ b/main.tex
@@ -291,13 +291,11 @@ distinction and semantic equivalence
 \citep{hayashi2025EvaluatingLlmsCapability,petersen2023LexicalSemanticsWith}.
 However, the ``understanding'' LLMs develop of words is dependent on the
 amount of their pre-training that relates to it
-\cite{kandpal2023LargeLanguageModels}.  In terms of ontology population, LLMs
-are required to apply their lexical sense of concept and individual labels to
-effectively identify assertions. Variation in entity label naming highlights
-the parity between the ontological semantics of the entities and the learnt
-lexical semantics of LLMs for their labels. This parity is crucial for
-effective ontology population. As most LLMs employ subword tokenization like
-Byte Pair Encoding (BPE) \citep{sennrich2016NeuralMachineTranslation} for
+\cite{kandpal2023LargeLanguageModels}. Variation in entity label naming
+highlights the parity between the ontological semantics of the entities and
+the learnt lexical semantics of LLMs for their labels. This parity is crucial
+for effective ontology population. As most LLMs employ subword tokenization
+like Byte Pair Encoding (BPE) \citep{sennrich2016NeuralMachineTranslation} for
 understanding prompts and generating texts, evaluation over entity labels
 highlights whether LLMs are able to effectively utilize lexical semantics or
 resort to more conventional string edit-distance-based senses for performing
