--- a/main.tex
+++ b/main.tex
@@ -294,7 +294,7 @@ amount of their pre-training that relates to it
 \cite{kandpal2023LargeLanguageModels}. Variation in entity label naming
 highlights the parity between the ontological semantics of the entities and
 the learnt lexical semantics of LLMs for their labels. This parity is crucial
-for effective ontology population. As most LLMs employ subword tokenization
+for effective ontology learning. As most LLMs employ subword tokenization
 like Byte Pair Encoding (BPE) \citep{sennrich2016NeuralMachineTranslation} for
 understanding prompts and generating texts, evaluation over entity labels
 highlights whether LLMs are able to effectively utilize lexical semantics or
