--- a/main.tex
+++ b/main.tex
@@ -299,7 +299,7 @@ like Byte Pair Encoding (BPE) \citep{sennrich2016NeuralMachineTranslation} for
 understanding prompts and generating texts, evaluation over entity labels
 highlights whether LLMs are able to effectively utilize lexical semantics or
 resort to more conventional string edit-distance-based senses for performing
-ontology population.
+ontology learning.
 
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
