--- a/main.tex
+++ b/main.tex
@@ -290,7 +290,7 @@ learnt by LLMs are known to exhibit impressive performance on tasks of sense
 distinction and semantic equivalence
 \citep{hayashi2025EvaluatingLlmsCapability,petersen2023LexicalSemanticsWith}.
 However, the ``understanding'' LLMs develop of words is dependent on the
-amount of their pre-training that relates to it
+amount of their pre-training data that relates to it
 \cite{kandpal2023LargeLanguageModels}. Variation in entity label naming
 highlights the parity between the ontological semantics of the entities and
 the learnt lexical semantics of LLMs for their labels. This parity is crucial
