--- a/main.tex
+++ b/main.tex
@@ -292,14 +292,15 @@ distinction and semantic equivalence
 However, the ``understanding'' LLMs develop of words is dependent on the
 amount of their pre-training data that relates to it
 \cite{kandpal2023LargeLanguageModels} (i.e. the popularity of the words and
-topics). Variation in entity label naming highlights the parity between the
-ontological semantics of the entities and the learnt lexical semantics of LLMs
-for their labels. This parity is crucial for effective ontology learning. As
-most LLMs employ subword tokenization like Byte Pair Encoding (BPE)
-\citep{sennrich2016NeuralMachineTranslation} for understanding prompts and
-generating texts, evaluation over entity labels highlights whether LLMs are
-able to effectively utilize lexical semantics or resort to more conventional
-string edit-distance-based senses for performing ontology learning.
+topics in the pre-training data). Variation in entity label naming highlights
+the parity between the ontological semantics of the entities and the learnt
+lexical semantics of LLMs for their labels. This parity is crucial for
+effective ontology learning. As most LLMs employ subword tokenization like
+Byte Pair Encoding (BPE) \citep{sennrich2016NeuralMachineTranslation} for
+understanding prompts and generating texts, evaluation over entity labels
+highlights whether LLMs are able to effectively utilize lexical semantics or
+resort to more conventional string edit-distance-based senses for performing
+ontology learning.
 
 \subsubsection{Taxonomy:}
 \label{subsubsec:ont-factor-taxonomy}
