--- a/main.tex
+++ b/main.tex
@@ -532,7 +532,7 @@ manner of influence each factor introduces.
 \label{sec:experimentation}
 
 To illustrate the influence of various factors on an LLM-supported ontology
-learning task, we conduct experiments for ontology population and investigate
+learning task, we perform experiments for ontology population and investigate
 the ontology factors: structure, taxonomy and entity labels; and the LLM
 factors: choice of LLM, modelling objective, prompting approach, domain
 context and response variation.
