--- a/main.tex
+++ b/main.tex
@@ -542,12 +542,12 @@ context and response variation.
 
 Ontology population is the task of mapping new individuals to concepts within
 an ontology \cite{petasis2011OntologyPopulationEnrichment}. We select ontology
-population as the first learning task to investigate as it is the simplest of
-all ontology learning tasks. Despite being simple, ontology population
-requires an LLM to ``understand'' concepts and instances in an ontology to
-make new assertions. LLM-supported ontology population helps us investigate
-the degree of awareness LLMs posses of ontology assertion relations and of the
-entities themselves.
+population as the first learning task to investigate for its
+simplicity. Despite being simple, ontology population requires an LLM to
+``understand'' concepts and instances in an ontology to make new
+assertions. LLM-supported ontology population helps us investigate the degree
+of awareness LLMs posses of ontology assertion relations and of the entities
+themselves.
 
 % \subsection{Formulation}
 % \label{subsec:formulation}
