--- a/main.tex
+++ b/main.tex
@@ -542,12 +542,12 @@ context and response variation.
 
 Ontology population is the task of mapping new individuals to concepts within
 an ontology \cite{petasis2011OntologyPopulationEnrichment}. We select ontology
-population as the first learning task to investigate for its
-simplicity. Despite being simple, ontology population requires an LLM to
-``understand'' concepts and instances in an ontology to make new
-assertions. LLM-supported ontology population helps us investigate the degree
-of awareness LLMs posses of ontology assertion relations and of the entities
-themselves.
+population as the first learning task to investigate as it is the simplest of
+all ontology learning tasks. Despite being simple, ontology population
+requires an LLM to ``understand'' concepts and instances in an ontology to
+make new assertions. LLM-supported ontology population helps us investigate
+the degree of awareness LLMs posses of ontology assertion relations and of the
+entities themselves.
 
 % \subsection{Formulation}
 % \label{subsec:formulation}
@@ -579,9 +579,9 @@ themselves.
 \subsection{Ontology Factors}
 \label{subsec:method-ontology-variability}
 
-For investigation of the influence of 
+We select three domain-specific ontologies characterized by varying structural
+complexity and, (by virtue of their differing domains) distinct entity labels.
 % Dataset Choice
-We conduct experiments over three ontologies of varying size and complexity.
 The Wines Ontology \cite{noy2001OntologyDevelopment101} is a well-known
 ontology; it is small, structurally simple, and represents a relatively
 popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
