--- a/main.tex
+++ b/main.tex
@@ -582,8 +582,11 @@ entities themselves.
 We select three domain-specific ontologies characterized by varying structural
 complexity and, (by virtue of their differing domains) distinct entity labels.
 % Dataset Choice
-The Wines Ontology \cite{noy2001OntologyDevelopment101} is a well-known
-ontology; it is small, structurally simple, and represents a relatively
+\begin{itemize}
+\item The Wines Ontology \cite{noy2001OntologyDevelopment101} is a structurally
+simple and well-known ontology concerning wines
+\end{itemize}
+; it is small, structurally simple, and represents a relatively
 popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
 a larger, more complex and newer ontology focused on accurately capturing the
 life-cycle of digital evidence. We have added individuals to its concepts
