--- a/main.tex
+++ b/main.tex
@@ -583,8 +583,8 @@ We select three domain-specific ontologies characterized by varying structural
 complexity and, (by virtue of their differing domains) distinct entity labels.
 % Dataset Choice
 \begin{itemize}
-\item The Wines Ontology \cite{noy2001OntologyDevelopment101} is a structurally
-simple and well-known ontology concerning wines
+\item The Wines Ontology \cite{noy2001OntologyDevelopment101} is a
+  structurally simple and well-known ontology regarding wines
 \end{itemize}
 ; it is small, structurally simple, and represents a relatively
 popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
