--- a/main.tex
+++ b/main.tex
@@ -584,7 +584,8 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
 % Dataset Choice
 \begin{itemize}
 \item The Wines Ontology \cite{noy2001OntologyDevelopment101} is a
-  structurally simple and well-known ontology regarding wines
+  structurally simple and well-known ontology regarding wines. It represents
+  information about the colour, flavour and origin of various wines.
 \end{itemize}
 ; it is small, structurally simple, and represents a relatively
 popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
