--- a/main.tex
+++ b/main.tex
@@ -587,8 +587,7 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   structurally simple and well-known ontology regarding wines. It represents
   information about the colour, flavour and origin of various wines.
 \end{itemize}
-; it is small, structurally simple, and represents a relatively
-popular domain. The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
+The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
 a larger, more complex and newer ontology focused on accurately capturing the
 life-cycle of digital evidence. We have added individuals to its concepts
 using the Owl Trafficking example provided on the CASE Ontology
