--- a/main.tex
+++ b/main.tex
@@ -588,7 +588,7 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   information about the colour, flavour and origin of various wines.
 \item The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
 a larger, more complex and newer ontology focused on accurately capturing the
-life-cycle of digital evidence. We have added individuals to its concepts
+life-cycle of digital evidence. We add individuals to its concepts
 using the Owl Trafficking example provided on the CASE Ontology
 website\footnote{\url{https://caseontology.org/examples/}} and also include in
 it all concepts from the closely related UCO Ontology
