--- a/main.tex
+++ b/main.tex
@@ -586,14 +586,15 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
 \item The Wines Ontology \cite{noy2001OntologyDevelopment101} is a
   structurally simple and well-known ontology regarding wines. It represents
   information about the colour, flavour and origin of various wines.
-\item The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is
-a larger, more complex and newer ontology focused on accurately capturing the
-life-cycle of digital evidence. We add individuals to its concepts
-using the Owl Trafficking example provided on the CASE Ontology
-website\footnote{\url{https://caseontology.org/examples/}} and also include in
-it all concepts from the closely related UCO Ontology
-\cite{casey2017AdvancingCoordinatedCyber}. Hereafter, we refer to this
-composite constructed ontology as the CASE Ontology.
+\item The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is a larger,
+  more complex and newer ontology focused on accurately capturing the
+  life-cycle of digital evidence. We add individuals to its concepts using the
+  Owl Trafficking example provided on the CASE Ontology
+  website\footnote{\url{https://caseontology.org/examples/}}. As the CASE
+  Ontology is built on top of the UCO Ontology
+  \cite{casey2017AdvancingCoordinatedCyber}, we include concepts from it in
+  our experimentation. Hereafter, we refer to this composite constructed
+  ontology as the CASE Ontology.
 \end{itemize}
  The Astronomy Ontology
 \cite{shaya2012AstronomyOntology} is the largest of the three; it has fewer
