--- a/main.tex
+++ b/main.tex
@@ -595,6 +595,7 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   \cite{casey2017AdvancingCoordinatedCyber}, we include concepts from it in
   our experimentation. Hereafter, we refer to this composite constructed
   ontology as the CASE Ontology.
+\item The Astronomy Ontology \cite{shaya2012AstronomyOntology}
 \end{itemize}
  The Astronomy Ontology
 \cite{shaya2012AstronomyOntology} is the largest of the three; it has fewer
