--- a/main.tex
+++ b/main.tex
@@ -597,7 +597,7 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   ontology as the CASE Ontology.
 \item The Astronomy Ontology \cite{shaya2012AstronomyOntology} is the largest
   ontology of the three ontologies concerning astronomical phenomena including
-  planets, stars and the relevant laws of physics
+  planets, stars and the relevant laws of physics.
 \end{itemize}
  The Astronomy Ontology
 \cite{shaya2012AstronomyOntology} is the largest of the three; it has fewer
