--- a/main.tex
+++ b/main.tex
@@ -599,9 +599,7 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   ontology of the three ontologies concerning astronomical phenomena including
   planets, stars and the relevant laws of physics.
 \end{itemize}
- The Astronomy Ontology
-\cite{shaya2012AstronomyOntology} is the largest of the three; it has fewer
-individuals but higher depth and breadth. All three ontologies comprise of
+All three ontologies comprise of
 hierarchies where every concept (except the top concept) has at most a single
 parent. We wish to expand the considered set of ontologies to include larger
 ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb} with more complicated
