--- a/main.tex
+++ b/main.tex
@@ -592,8 +592,8 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   Owl Trafficking example provided on the CASE Ontology
   website\footnote{\url{https://caseontology.org/examples/}}. As the CASE
   Ontology is built on top of the UCO Ontology
-  \cite{casey2018EvolutionExpressingExchanging}, we include concepts from it in
-  our experimentation. Hereafter, we refer to this composite constructed
+  \cite{casey2018EvolutionExpressingExchanging}, we include concepts from it
+  in our experimentation. Hereafter, we refer to this composite constructed
   ontology as the CASE Ontology.
 \item The Astronomy Ontology \cite{shaya2012AstronomyOntology} is the largest
   ontology of the three ontologies concerning astronomical phenomena including
