--- a/main.tex
+++ b/main.tex
@@ -588,10 +588,11 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   information about the colour, flavour and origin of various wines.
 \item The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is a larger,
   more complex and newer ontology focused on accurately capturing the
-  life-cycle of digital evidence. We add individuals to its concepts using the
-  Owl Trafficking example provided on the CASE Ontology
-  website\footnote{\url{https://caseontology.org/examples/}}. As the CASE
-  Ontology is built on top of the UCO Ontology
+  life-cycle of digital evidence. We incorporate individuals from the Owl
+  Trafficking example available on the CASE
+  website\footnote{\url{https://caseontology.org/examples/}} add individuals
+  to its concepts using the Owl Trafficking example provided on the CASE
+  Ontology website As the CASE Ontology is built on top of the UCO Ontology
   \cite{casey2018EvolutionExpressingExchanging}, we include concepts from it
   in our experimentation. Hereafter, we refer to this composite constructed
   ontology as the CASE Ontology.
