--- a/main.tex
+++ b/main.tex
@@ -590,9 +590,8 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   more complex and newer ontology focused on accurately capturing the
   life-cycle of digital evidence. We incorporate individuals from the Owl
   Trafficking example available on the CASE
-  website\footnote{\url{https://caseontology.org/examples/}} add individuals
-  to its concepts using the Owl Trafficking example provided on the CASE
-  Ontology website As the CASE Ontology is built on top of the UCO Ontology
+  website\footnote{\url{https://caseontology.org/examples/}} to investigate
+  ontology population. As the CASE Ontology is built on top of the UCO Ontology
   \cite{casey2018EvolutionExpressingExchanging}, we include concepts from it
   in our experimentation. Hereafter, we refer to this composite constructed
   ontology as the CASE Ontology.
