--- a/main.tex
+++ b/main.tex
@@ -591,10 +591,10 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   life-cycle of digital evidence. We incorporate individuals from the Owl
   Trafficking example available on the CASE
   website\footnote{\url{https://caseontology.org/examples/}} to investigate
-  ontology population. As the CASE Ontology is built on top of the UCO Ontology
-  \cite{casey2018EvolutionExpressingExchanging}, we include concepts from it
-  in our experimentation. Hereafter, we refer to this composite constructed
-  ontology as the CASE Ontology.
+  ontology population with the ontology. As the CASE Ontology is built on top
+  of the UCO Ontology \cite{casey2018EvolutionExpressingExchanging}, we
+  include concepts from it in our experimentation. Hereafter, we refer to this
+  composite constructed ontology as the CASE Ontology.
 \item The Astronomy Ontology \cite{shaya2012AstronomyOntology} is the largest
   ontology of the three ontologies concerning astronomical phenomena including
   planets, stars and the relevant laws of physics.
