--- a/main.tex
+++ b/main.tex
@@ -585,7 +585,10 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
 \begin{itemize}
 \item The Wines Ontology \cite{noy2001OntologyDevelopment101} is a
   structurally simple and well-known ontology regarding wines. It represents
-  information about the colour, flavour and origin of various wines.
+  information about the colour, flavour and origin of various wines. The Wines
+  Ontology provides a simple ontology learning use-case that we expect most
+  LLMs to have good knowledge of either directly or through the topic of
+  wines. 
 \item The CASE Ontology \cite{casey2017AdvancingCoordinatedCyber} is a larger,
   more complex and newer ontology focused on accurately capturing the
   life-cycle of digital evidence. We incorporate individuals from the Owl
