--- a/main.tex
+++ b/main.tex
@@ -597,7 +597,8 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   ontology population with the ontology. As the CASE Ontology is built on top
   of the UCO Ontology \cite{casey2018EvolutionExpressingExchanging}, we
   include concepts from it in our experimentation. Hereafter, we refer to this
-  composite constructed ontology as the CASE Ontology.
+  composite constructed ontology as the CASE Ontology. The CASE ontology poses
+  a complex and lesser known scenario that LLMs may struggle with.
 \item The Astronomy Ontology \cite{shaya2012AstronomyOntology} is the largest
   ontology of the three ontologies concerning astronomical phenomena including
   planets, stars and the relevant laws of physics.
