--- a/main.tex
+++ b/main.tex
@@ -601,7 +601,9 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   a complex and lesser known scenario that LLMs may struggle with.
 \item The Astronomy Ontology \cite{shaya2012AstronomyOntology} is the largest
   ontology of the three ontologies concerning astronomical phenomena including
-  planets, stars and the relevant laws of physics.
+  planets, stars and the relevant laws of physics. Despite its large size, the
+  Astronomy Ontology concerns a well-known topic that one might expect LLMs to
+  have `seen' abundantly in its pre-training corpus.
 \end{itemize}
 All three ontologies comprise of
 hierarchies where every concept (except the top concept) has at most a single
