--- a/main.tex
+++ b/main.tex
@@ -605,13 +605,12 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   Astronomy Ontology concerns a well-known topic that one might expect LLMs to
   have `seen' abundantly in its pre-training corpus.
 \end{itemize}
-All three ontologies comprise of
-hierarchies where every concept (except the top concept) has at most a single
-parent. We wish to expand the considered set of ontologies to include larger
-ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb} with more complicated
-relationships and hierarchies in future works.  Table
-\ref{tab:ontology-metrics} outlines relevant structural metrics of the
-ontologies to highlight their differences.
+The chosen ontologies do not include relational loops and single parentage.
+% We wish to expand the considered set of ontologies to include larger
+% ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb} with more complicated
+% relationships and hierarchies in future works.  Table
+% \ref{tab:ontology-metrics} outlines relevant structural metrics of the
+% ontologies to highlight their differences.
 
 \begin{table}[H]
   \centering
