--- a/main.tex
+++ b/main.tex
@@ -612,6 +612,9 @@ The chosen ontologies do not include relational loops and single parentage.
 % \ref{tab:ontology-metrics} outlines relevant structural metrics of the
 % ontologies to highlight their differences.
 
+\subsubsection{Structure}
+Test
+
 \begin{table}[H]
   \centering
   \caption{Ontology Structure Metrics for Wines, CASE and Astronomy
