--- a/main.tex
+++ b/main.tex
@@ -613,13 +613,13 @@ The chosen ontologies do not include relational loops and single parentage.
 % ontologies to highlight their differences.
 
 \subsubsection{Structure}
-
+Table \ref{tab:
 
 \begin{table}[H]
   \centering
   \caption{Ontology Structure Metrics for Wines, CASE and Astronomy
     ontologies}
-  \label{tab:ontology-metrics}
+  \label{tab:ontology-structure-metrics}
   \begin{tabular}{|l|r|r|r|}
     \hline
     \textbf{Metric}                                                                & \textbf{Wines} & \textbf{CASE} & \textbf{Astronomy} \\
