--- a/main.tex
+++ b/main.tex
@@ -613,7 +613,8 @@ The chosen ontologies do not include relational loops and single parentage.
 % ontologies to highlight their differences.
 
 \subsubsection{Structure}
-Table \ref{tab:
+Table \ref{tab:ontology-structure-metrics} provides an overview of the
+structural metrics of the three ontologies.
 
 \begin{table}[H]
   \centering
