--- a/main.tex
+++ b/main.tex
@@ -614,7 +614,7 @@ The chosen ontologies do not include relational loops and single parentage.
 
 \subsubsection{Structure}
 Table \ref{tab:ontology-structure-metrics} provides an overview of the
-structural metrics of the three ontologies.
+structural metrics of the three ontologies. 
 
 \begin{table}[H]
   \centering
@@ -625,8 +625,8 @@ structural metrics of the three ontologies.
     \hline
     \textbf{Metric}                                                                & \textbf{Wines} & \textbf{CASE} & \textbf{Astronomy} \\
     \hline
-    \textbf{Classes}                                                          & 76                      & 434                    & 1663                        \\
-    \textbf{Individuals}                                                      & 161                     & 131                    & 68                          \\
+    \textbf{Classes (No.)}                                                          & 76                      & 434                    & 1663                        \\
+    \textbf{Individuals(No.)}                                                      & 161                     & 131                    & 68                          \\
     \textbf{Depth} \cite{gangemi2005OntologyEvaluationValidation}             & 4                       & 8                      & 10                          \\
     \textbf{Breadth} \cite{gangemi2005OntologyEvaluationValidation}           & 62                      & 228                    & 989                         \\
     \textbf{Dispersion (max.)} \cite{gangemi2005OntologyEvaluationValidation} & 3                       & 118                    & 44                          \\
